--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .App {
   text-align: center;
+  padding: 60px 0 100px;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 70vmin;
   pointer-events: none;
 }
 
@@ -23,7 +26,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+div {
+  display: block;
+}
 .App-link {
   color: #61dafb;
 }
