--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,21 @@
 .App {
-  text-align: center;
   padding: 60px 0 100px;
   max-width: 960px;
   margin: 0 auto;
 }
 
-.App-logo {
-  height: 70vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-div {
+.App .logo {
+  max-width: 200px;
   display: block;
-}
-.App-link {
-  color: #61dafb;
+  margin: 30px auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App footer {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 13px;
+}
+
+.App a {
+  color: #6c63ff;
 }
